--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.12"
 kubernetes = "^30.1.0"
 slack-sdk = "^3.31.0"
+dynaconf = "^3.2.6"
+loguru = "^0.7.2"
 
 
 [build-system]
