--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,13 @@ dynaconf = "^3.2.6"
 loguru = "^0.7.2"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.8.0"
+mypy = "^1.11.1"
+pylint = "^3.2.6"
+flake8 = "^7.1.1"
+kubernetes-stubs = "^22.6.0.post1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
